--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1147,6 +1147,7 @@
                                         </constraints>
                                         <state key="normal" title="上一题"/>
                                         <connections>
+                                            <action selector="buttonLastClick:" destination="sNW-13-Bm9" eventType="touchUpInside" id="zCl-bM-OIs"/>
                                             <action selector="lastBtnClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="ghd-d0-dSt"/>
                                         </connections>
                                     </button>
@@ -1158,6 +1159,7 @@
                                         </constraints>
                                         <state key="normal" title="下一题"/>
                                         <connections>
+                                            <action selector="buttonNextClick:" destination="sNW-13-Bm9" eventType="touchUpInside" id="avE-uy-gdT"/>
                                             <action selector="nextBtnClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="ZbM-cG-pPg"/>
                                         </connections>
                                     </button>
@@ -1217,41 +1219,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4nR-0w-Tom">
-                                <rect key="frame" x="87" y="30" width="200" height="31"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3m5-KW-6T0">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4nR-0w-Tom">
+                                        <rect key="frame" x="88" y="8" width="200" height="29"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="Ogs-NW-hKs"/>
+                                            <constraint firstAttribute="width" constant="200" id="ef5-P1-yyo"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="我的笔记"/>
+                                            <segment title="网友笔记"/>
+                                            <segment title="添加笔记"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentNotesClick:" destination="e0n-zO-FfA" eventType="valueChanged" id="c8C-Q3-oVN"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="65Z-8G-5Ho"/>
-                                    <constraint firstAttribute="height" constant="30" id="lJ4-Ot-iVB"/>
+                                    <constraint firstItem="4nR-0w-Tom" firstAttribute="centerY" secondItem="3m5-KW-6T0" secondAttribute="centerY" id="04K-h4-u5C"/>
+                                    <constraint firstItem="4nR-0w-Tom" firstAttribute="centerX" secondItem="3m5-KW-6T0" secondAttribute="centerX" id="K90-dF-BRO"/>
+                                    <constraint firstAttribute="height" constant="44" id="OWT-eb-s44"/>
                                 </constraints>
-                                <segments>
-                                    <segment title="我的笔记"/>
-                                    <segment title="网友笔记"/>
-                                    <segment title="添加笔记"/>
-                                </segments>
-                                <connections>
-                                    <action selector="segmentNotesClick:" destination="e0n-zO-FfA" eventType="valueChanged" id="c8C-Q3-oVN"/>
-                                </connections>
-                            </segmentedControl>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="avf-Q5-GGg">
-                                <rect key="frame" x="0.0" y="65" width="375" height="602"/>
-                                <connections>
-                                    <outlet property="delegate" destination="e0n-zO-FfA" id="9F2-IF-UBm"/>
-                                </connections>
-                            </scrollView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="avf-Q5-GGg" firstAttribute="top" secondItem="4nR-0w-Tom" secondAttribute="bottom" constant="5" id="2qd-zN-gnY"/>
-                            <constraint firstAttribute="trailing" secondItem="avf-Q5-GGg" secondAttribute="trailing" id="Lmh-gp-dIn"/>
-                            <constraint firstItem="H8m-Nu-seg" firstAttribute="top" secondItem="avf-Q5-GGg" secondAttribute="bottom" id="OrJ-Bg-l2J"/>
-                            <constraint firstItem="avf-Q5-GGg" firstAttribute="leading" secondItem="krv-jc-hKz" secondAttribute="leading" id="hIJ-lj-PVn"/>
-                            <constraint firstItem="4nR-0w-Tom" firstAttribute="top" secondItem="8iQ-5w-iZx" secondAttribute="bottom" constant="10" id="qnB-Qc-SLW"/>
-                            <constraint firstItem="4nR-0w-Tom" firstAttribute="centerX" secondItem="krv-jc-hKz" secondAttribute="centerX" id="yru-DZ-b5C"/>
+                            <constraint firstItem="3m5-KW-6T0" firstAttribute="top" secondItem="8iQ-5w-iZx" secondAttribute="bottom" id="DCp-3A-5te"/>
+                            <constraint firstAttribute="trailing" secondItem="3m5-KW-6T0" secondAttribute="trailing" id="ZPs-bX-BXG"/>
+                            <constraint firstItem="3m5-KW-6T0" firstAttribute="leading" secondItem="krv-jc-hKz" secondAttribute="leading" id="pR9-do-pcF"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="scrolViewNotes" destination="avf-Q5-GGg" id="aHH-gT-7Dy"/>
                         <outlet property="segmentedNots" destination="4nR-0w-Tom" id="xP2-K2-HCW"/>
                     </connections>
                 </viewController>
